k8s/ALBingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flaskapp
  namespace: flaskapp
  labels:
    app: flaskapp
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: flaskappingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/healthcheck-path: /templates/index.html
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp    
            port:
              number: 80
